# fuel_uk

./: .gitignore  LICENSE  README.md  app.py  df.json  extract.py  pyproject.toml  requirements.txt  transform.py
.github/workflows/: dbt.yaml
data/raw/: applegreen-uk_21_07_2024_08_50_18.parquet  applegreen-uk_22_07_2024_08_50_17.snappy.parquet  ascona-group_19_07_2024_11_51_04.parquet  ascona-group_21_07_2024_11_50_15.snappy.parquet  asda_19_07_2024_00_00_00.parquet  asda_22_07_2024_00_00_00.snappy.parquet  bp_21_07_2024_11_00_05.parquet  bp_22_07_2024_11_00_05.snappy.parquet  esso_21_07_2024_01_05_30.parquet  esso_22_07_2024_01_05_14.snappy.parquet  jet-retail-uk_21_07_2024_10_45_33.parquet  jet-retail-uk_22_07_2024_10_45_32.snappy.parquet  morrisons_21_07_2024_10_30_23.parquet  morrisons_22_07_2024_10_30_32.snappy.parquet  moto_21_07_2024_21_58_00.parquet  moto_22_07_2024_17_58_01.snappy.parquet  motor-fuel-group_21_07_2024_00_00_01.parquet  motor-fuel-group_22_07_2024_00_00_01.snappy.parquet  rontec_21_07_2024_10_55_02.parquet  rontec_22_07_2024_10_55_05.snappy.parquet  sainsburys_21_07_2024_02_00_19.parquet  sainsburys_22_07_2024_02_00_19.snappy.parquet  sgn_20_07_2024_10_07_53.snappy.parquet  shell_21_07_2024_00_00_00.parquet  shell_22_07_2024_00_00_00.snappy.parquet  tesco_21_07_2024_11_18_33.parquet  tesco_22_07_2024_11_18_33.snappy.parquet
petro_dbt/: .user.yml  dbt_project.yml  petro.duckdb  profiles.yml
prices/: asda.py  asda_categories.json  by_link.py  offer_products.json  offer_products_details.json  requirements.txt
(+7823 files in other folders)
